--- a/Town_Builder/ogre.cfg
+++ b/Town_Builder/ogre.cfg
@@ -9,7 +9,7 @@ Fixed Pipeline Enabled=Yes
 Floating-point mode=Fastest
 Full Screen=No
 Multi device memory hint=Use minimum system memory
-Rendering Device=Monitor-1-NVIDIA GeForce GTX 1060 3GB
+Rendering Device=Monitor-1-NVIDIA GeForce GTX 1060
 Resource Creation Policy=Create on all devices
 Use Multihead=Auto
 VSync=Yes
