added debug gui and skybox. fixed little things

--- a/Town_Builder_OgreNext/imgui.ini
+++ b/Town_Builder_OgreNext/imgui.ini
@@ -1,10 +1,35 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=-2,0
+Size=429,161
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=580,191
-Size=550,680
+Pos=1049,0
+Size=551,654
+Collapsed=1
+
+[Window][Example: Console]
+Pos=-4,157
+Size=520,600
+Collapsed=0
+
+[Window][Example: Log]
+Pos=-1,160
+Size=500,400
+Collapsed=0
+
+[Window][Dear ImGui Metrics]
+Pos=-1,159
+Size=338,222
+Collapsed=0
+
+[Window][Style Editor]
+Pos=60,60
+Size=339,856
+Collapsed=0
+
+[Window][Example: Custom rendering]
+Pos=-1,162
+Size=466,265
 Collapsed=0
 
