fixed absolute paths part2! (mal wieder xD)

--- a/Town_Builder_OgreNext/resources.cfg
+++ b/Town_Builder_OgreNext/resources.cfg
@@ -61,57 +61,57 @@
 
 # Ogre Core Resources
 [OgreInternal]
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/ShadowVolume
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/RTShaderLib/materials
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/RTShaderLib/GLSL
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/RTShaderLib/HLSL_Cg
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/Terrain/
+FileSystem=media/ShadowVolume
+FileSystem=media/RTShaderLib/materials
+FileSystem=media/RTShaderLib/GLSL
+FileSystem=media/RTShaderLib/HLSL_Cg
+FileSystem=media/Terrain/
 
 # Resources required by the sample browser and most samples.
 [Essential]
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/SdkTrays.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/profiler.zip
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/thumbnails
+# Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/SdkTrays.zip
+# Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/profiler.zip
+# FileSystem=D:/Development/Ogre1.12.5/sdk/Media/thumbnails
 
 # Common sample resources needed by many of the samples.
 # Rarely used resources should be separately loaded by the
 # samples which require them.
 [General]
 # Bites uses the next entry to discover the platform shaders
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/fonts
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/programs
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/scripts
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/textures
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/textures/nvidia
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/models
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/particle
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/DeferredShadingMedia
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/DeferredShadingMedia/DeferredShading/post
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/PCZAppMedia
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/scripts/SSAO
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/textures/SSAO
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/volumeTerrain
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/cubemap.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/cubemapsJS.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/dragon.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/fresneldemo.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/ogretestmap.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/ogredance.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/Sinbad.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/skybox.zip
-Zip=D:/Development/Ogre1.12.5/sdk/Media/volumeTerrain/volumeTerrainBig.zip
+FileSystem=media
+FileSystem=media/fonts
+FileSystem=media/materials/programs
+FileSystem=media/materials/scripts
+FileSystem=media/materials/textures
+FileSystem=media/materials/textures/nvidia
+FileSystem=media/models
+FileSystem=media/particle
+FileSystem=media/DeferredShadingMedia
+FileSystem=media/DeferredShadingMedia/DeferredShading/post
+FileSystem=media/PCZAppMedia
+FileSystem=media/materials/scripts/SSAO
+FileSystem=media/materials/textures/SSAO
+FileSystem=media/volumeTerrain
+Zip=media/packs/cubemap.zip
+Zip=media/packs/cubemapsJS.zip
+Zip=media/packs/dragon.zip
+Zip=media/packs/fresneldemo.zip
+Zip=media/packs/ogretestmap.zip
+Zip=media/packs/ogredance.zip
+# Zip=media/packs/Sinbad.zip
+Zip=media/packs/skybox.zip
+Zip=media/volumeTerrain/volumeTerrainBig.zip
 
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/PBR
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/materials/textures/glTF2_IBL
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/DamagedHelmet.zip
+FileSystem=media/PBR
+FileSystem=media/materials/textures/glTF2_IBL
+Zip=media/packs/DamagedHelmet.zip
 
-FileSystem=D:/Development/Ogre1.12.5/sdk/Media/HLMS
+FileSystem=media/HLMS
 
 [BSPWorld]
-Zip=D:/Development/Ogre1.12.5/sdk/Media/packs/oa_rpg3dm2.pk3
+# Zip=media/packs/oa_rpg3dm2.pk3
 
 # Materials for visual tests
 [Tests]
-FileSystem=D:/Development/Ogre1.12.5/sdk/Tests/Media
+# FileSystem=D:/Development/Ogre1.12.5/sdk/Tests/Media
 
