--- a/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
+++ b/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
@@ -75,6 +75,9 @@
     <ClCompile Include="source\main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="source\Event.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="source\PagedGeometry\BatchedGeometry.h">
@@ -144,6 +147,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="source\pch.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="source\Event.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
