--- a/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj
+++ b/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj
@@ -19,11 +19,11 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="source\Camera.cpp" />
-    <ClCompile Include="source\Event.cpp" />
-    <ClCompile Include="source\Game.cpp" />
-    <ClCompile Include="source\InputManager.cpp" />
-    <ClCompile Include="source\ModelPlacer.cpp" />
+    <ClCompile Include="source\Game\Camera.cpp" />
+    <ClCompile Include="source\Engine\Event.cpp" />
+    <ClCompile Include="source\Game\Game.cpp" />
+    <ClCompile Include="source\Engine\InputManager.cpp" />
+    <ClCompile Include="source\Game\Terrain\ModelPlacer.cpp" />
     <ClCompile Include="source\PagedGeometry\BatchedGeometry.cpp" />
     <ClCompile Include="source\PagedGeometry\BatchPage.cpp" />
     <ClCompile Include="source\PagedGeometry\GrassLoader.cpp" />
@@ -35,21 +35,20 @@
     <ClCompile Include="source\PagedGeometry\TreeLoader3D.cpp" />
     <ClCompile Include="source\PagedGeometry\WindBatchedGeometry.cpp" />
     <ClCompile Include="source\PagedGeometry\WindBatchPage.cpp" />
-    <ClCompile Include="source\pch.cpp" />
-    <ClCompile Include="source\PlantPlacer.cpp" />
-    <ClCompile Include="source\SimplexNoise.cpp" />
-    <ClCompile Include="source\Terrain.cpp" />
+    <ClCompile Include="source\Game\Terrain\PlantPlacer.cpp" />
+    <ClCompile Include="source\Common\SimplexNoise.cpp" />
+    <ClCompile Include="source\Game\Terrain\Terrain.cpp" />
     <ClCompile Include="source\main.cpp" />
+    <ClCompile Include="source\Recast\RecastInputGeom.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="source\Camera.h" />
-    <ClInclude Include="source\Event.h" />
-    <ClInclude Include="source\Game.h" />
-    <ClInclude Include="source\HeightFunction.h" />
-    <ClInclude Include="source\Helpers.h" />
-    <ClInclude Include="source\InputManager.h" />
-    <ClInclude Include="source\ModelPlacer.h" />
-    <ClInclude Include="source\OgreStableHeaders.h" />
+    <ClInclude Include="source\Game\Camera.h" />
+    <ClInclude Include="source\Engine\Event.h" />
+    <ClInclude Include="source\Game\Game.h" />
+    <ClInclude Include="source\Common\HeightFunction.h" />
+    <ClInclude Include="source\Common\Helpers.h" />
+    <ClInclude Include="source\Engine\InputManager.h" />
+    <ClInclude Include="source\Game\Terrain\ModelPlacer.h" />
     <ClInclude Include="source\PagedGeometry\BatchedGeometry.h" />
     <ClInclude Include="source\PagedGeometry\BatchPage.h" />
     <ClInclude Include="source\PagedGeometry\GrassLoader.h" />
@@ -62,10 +61,10 @@
     <ClInclude Include="source\PagedGeometry\TreeLoader3D.h" />
     <ClInclude Include="source\PagedGeometry\WindBatchedGeometry.h" />
     <ClInclude Include="source\PagedGeometry\WindBatchPage.h" />
-    <ClInclude Include="source\pch.h" />
-    <ClInclude Include="source\PlantPlacer.h" />
-    <ClInclude Include="source\SimplexNoise.h" />
-    <ClInclude Include="source\Terrain.h" />
+    <ClInclude Include="source\Game\Terrain\PlantPlacer.h" />
+    <ClInclude Include="source\Common\SimplexNoise.h" />
+    <ClInclude Include="source\Game\Terrain\Terrain.h" />
+    <ClInclude Include="source\Recast\RecastInputGeom.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
