--- a/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
+++ b/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
@@ -197,5 +197,8 @@
     <ClInclude Include="source\AI\AIAgent.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\Game\Terrain\Erosion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
