--- a/Town_Builder_OgreNext/imgui.ini
+++ b/Town_Builder_OgreNext/imgui.ini
@@ -4,9 +4,9 @@ Size=429,161
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=1049,0
+Pos=1050,2
 Size=551,654
-Collapsed=1
+Collapsed=0
 
 [Window][Example: Console]
 Pos=-4,157
@@ -39,12 +39,17 @@ Size=447,214
 Collapsed=0
 
 [Window][Stats]
-Pos=0,1
-Size=448,116
+Pos=0,0
+Size=150,900
 Collapsed=0
 
 [Window][Camera]
-Pos=11,337
+Pos=2,337
 Size=144,54
+Collapsed=0
+
+[Window][]
+Pos=0,0
+Size=400,900
 Collapsed=0
 
