--- a/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
+++ b/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj.filters
@@ -206,5 +206,8 @@
     <ClInclude Include="NavMeshBuilder.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="source\Game\Terrain\NewErosion.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
