--- a/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj
+++ b/Town_Builder_OgreNext/Town_Builder_OgreNext.vcxproj
@@ -37,18 +37,8 @@
     <ClCompile Include="source\Engine\Event.cpp" />
     <ClCompile Include="source\Game\Game.cpp" />
     <ClCompile Include="source\Engine\InputManager.cpp" />
+    <ClCompile Include="source\Game\Terrain\HydraulicErosion.cpp" />
     <ClCompile Include="source\Game\Terrain\ModelPlacer.cpp" />
-    <ClCompile Include="source\PagedGeometry\BatchedGeometry.cpp" />
-    <ClCompile Include="source\PagedGeometry\BatchPage.cpp" />
-    <ClCompile Include="source\PagedGeometry\GrassLoader.cpp" />
-    <ClCompile Include="source\PagedGeometry\ImpostorPage.cpp" />
-    <ClCompile Include="source\PagedGeometry\PagedGeometry.cpp" />
-    <ClCompile Include="source\PagedGeometry\PropertyMaps.cpp" />
-    <ClCompile Include="source\PagedGeometry\StaticBillboardSet.cpp" />
-    <ClCompile Include="source\PagedGeometry\TreeLoader2D.cpp" />
-    <ClCompile Include="source\PagedGeometry\TreeLoader3D.cpp" />
-    <ClCompile Include="source\PagedGeometry\WindBatchedGeometry.cpp" />
-    <ClCompile Include="source\PagedGeometry\WindBatchPage.cpp" />
     <ClCompile Include="source\Game\Terrain\PlantPlacer.cpp" />
     <ClCompile Include="source\Common\SimplexNoise.cpp" />
     <ClCompile Include="source\Game\Terrain\Terrain.cpp" />
@@ -67,21 +57,8 @@
     <ClInclude Include="source\Common\HeightFunction.h" />
     <ClInclude Include="source\Common\Helpers.h" />
     <ClInclude Include="source\Engine\InputManager.h" />
-    <ClInclude Include="source\Game\Terrain\Erosion.h" />
     <ClInclude Include="source\Game\Terrain\ModelPlacer.h" />
-    <ClInclude Include="source\Game\Terrain\NewErosion.h" />
-    <ClInclude Include="source\PagedGeometry\BatchedGeometry.h" />
-    <ClInclude Include="source\PagedGeometry\BatchPage.h" />
-    <ClInclude Include="source\PagedGeometry\GrassLoader.h" />
-    <ClInclude Include="source\PagedGeometry\ImpostorPage.h" />
-    <ClInclude Include="source\PagedGeometry\PagedGeometry.h" />
-    <ClInclude Include="source\PagedGeometry\PropertyMaps.h" />
-    <ClInclude Include="source\PagedGeometry\RandomTable.h" />
-    <ClInclude Include="source\PagedGeometry\StaticBillboardSet.h" />
-    <ClInclude Include="source\PagedGeometry\TreeLoader2D.h" />
-    <ClInclude Include="source\PagedGeometry\TreeLoader3D.h" />
-    <ClInclude Include="source\PagedGeometry\WindBatchedGeometry.h" />
-    <ClInclude Include="source\PagedGeometry\WindBatchPage.h" />
+    <ClInclude Include="source\Game\Terrain\HydraulicErosion.h" />
     <ClInclude Include="source\Game\Terrain\PlantPlacer.h" />
     <ClInclude Include="source\Common\SimplexNoise.h" />
     <ClInclude Include="source\Game\Terrain\Terrain.h" />
